# Python-Utils

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test_file.py
datasets/: scraped_data.csv
python_utils/: common_utils.py  db_utils.py  scraping_utils.py
testcases/databases/: scraped_data.db
testcases/dataframes/: pandas_df.py  polars_df.py
testcases/datasets/: scraped_data.parquet  scraped_data.xlsx
testcases/scraping/: bs4_template.py  se_template.py
testcases/scraping/scrapy_template/scrapy_template/: items.py  middlewares.py  pipelines.py  settings.py
testcases/scraping/scrapy_template/scrapy_template/spiders/: scrapy_template.py
